# Flare

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/flare/: Cargo.toml
crates/flare/src/: error.rs  lib.rs
crates/flare/src/lexer/: lexer.rs  token.rs
