[workspace]
members = [
    "crates/flare-ir",
    "crates/flare",
]

# Optional: set shared metadata and lints
[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Mathieu Thibeault-Thuot <you@veemlabs.ai>"]
repository = "https://github.com/veemlabs/flare"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
